feat(backend) SPRINT-092 implemented & verified